add website favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buy IT!</title>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="assets/icons/favicon.png"
+    />
 
     <!--Google Fonts-->
     <link
