remove uncessary class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--Header Section-->
-    <header id="site-header" class="header-background">
+    <header id="site-header">
       <div id="navigation-bar">
         <img src="assets/photos/Logo.png" alt="Site Logo" />
         <nav>
